--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>git revert commant</title>
 </head>
 <body>
-    
+<h2>git revert command</h2>  
 </body>
 </html>
